# IRC-CPP

./: .gitignore  CMakeLists.txt
.github/workflows/: build-freebsd-clang.yaml  build-freebsd-clang.yml  build-freebsd-gcc.yaml  build-linux-clang.yaml  build-linux-clang.yml  build-linux-gcc.yml
source/irc-server/: CMakeLists.txt  event_handler.cpp  kqueue.cpp  main.cpp  server.cpp  xlog.cpp
source/irc-server/include/: eventIO.hpp  event_handler.hpp  kqueue.hpp  server.hpp  xlog.hpp
test/irc-server/: CMakeLists.txt  irc_server_close_v4.cpp  irc_server_close_v6.cpp  irc_server_connect_v4.cpp  irc_server_connect_v6.cpp  irc_server_send_v4.cpp  irc_server_send_v6.cpp  irc_server_shutdown_v4.cpp  irc_server_shutdown_v6.cpp
